--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.16.0"
+    "pg": "^8.16.0",
+    "pug": "^3.0.3"
   }
 }
